# djtool

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  WIP.md  build-ffmpeg.sh  build.rs  compile-proto-grpcweb.py  static-ffmpeg.command  static-ffmpeg.sh  tauri.conf.json  tauri.conf.json.bk
.cargo/: config
.github/workflows/: build.yml  release.yml  test.yml
buildtools/: ffmpeg.rs  git.rs  libs.rs  mod.rs  mp3lame.rs
buildtools/dep_graph/: components.rs  lib.rs  mod.rs  par_dep_graph.rs  parallel.rs
buildtools/proto/: Cargo.toml
buildtools/proto/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
correlation/: Cargo.toml
correlation/src/: lib.rs
cross/: aarch64-unknown-linux-gnu.dockerfile  x86_64-unknown-linux-gnu.dockerfile
download/: Cargo.toml
download/src/: builder.rs  chunk.rs  lib.rs  preflight.rs
experimental/: Pipfile  README.md  audiooffset.py
ffmpeg/: Cargo.toml
ffmpeg-sys/: Cargo.toml  build.rs
ffmpeg-sys/src/: lib.rs
ffmpeg-sys/src/avutil/: error.rs  mod.rs  pixfmt.rs  rational.rs  util.rs
ffmpeg/src/: lib.rs
ffmpeg/src/codec/: audio.rs  audio_service.rs  capabilities.rs  context.rs  debug.rs  discard.rs  field_order.rs  flag.rs  id.rs  mod.rs  picture.rs  threading.rs  traits.rs  video.rs
ffmpeg/src/codec/decoder/: audio.rs  check.rs  conceal.rs  decoder.rs  mod.rs  opened.rs  slice.rs  subtitle.rs  video.rs
ffmpeg/src/codec/encoder/: audio.rs  encoder.rs  mod.rs  subtitle.rs  video.rs
ffmpeg/src/codec/packet/: flag.rs  mod.rs  side_data.rs
ffmpeg/src/codec/subtitle/: flag.rs  mod.rs
ffmpeg/src/device/: extensions.rs  input.rs  output.rs
ffmpeg/src/filter/: flag.rs  mod.rs
ffmpeg/src/filter/context/: mod.rs
ffmpeg/src/format/: mod.rs
ffmpeg/src/format/chapter/: chapter.rs  chapter_mut.rs  mod.rs
ffmpeg/src/format/context/: common.rs  input.rs  output.rs
ffmpeg/src/format/format/: flag.rs
ffmpeg/src/format/stream/: mod.rs  stream.rs  stream_mut.rs
ffmpeg/src/software/scaling/: flag.rs  support.rs
ffmpeg/src/util/: channel_layout.rs  error.rs  media.rs  mod.rs  picture.rs  time.rs
ffmpeg/src/util/chroma/: location.rs
ffmpeg/src/util/color/: primaries.rs  range.rs  space.rs  transfer_characteristic.rs
ffmpeg/src/util/format/: pixel.rs  sample.rs
ffmpeg/src/util/frame/: audio.rs  flag.rs  mod.rs  side_data.rs  video.rs
ffmpeg/src/util/log/: flag.rs
ffmpeg/src/util/mathematics/: mod.rs  rounding.rs
ffmpeg/src/util/option/: mod.rs  traits.rs
instagram/: Cargo.toml  Pipfile  main.ts  package.json  test.py
instagram/src/: main.rs
model/: Cargo.toml  build.rs
model/src/: lib.rs  sink.rs  source.rs  spotify.rs
model/src/proto/: proto.djtool.rs
proto/: djtool.proto  model.proto  service.proto
soundcloud/: Cargo.toml
spotify/: Cargo.toml
spotify/src/: config.rs  error.rs  lib.rs  model.rs  stream.rs
spotify/src/auth/: mod.rs  pkce.rs  utils.rs
spotify/src/cli/: mod.rs  options.rs
spotify/src/source/: mod.rs
src/: backend.rs  cli.rs  config.rs  debug.rs  download.rs  id3.rs  lib.rs  libold.rs  main.rs  progress.rs  proto.rs  serialization.rs  sink.rs  source.rs  spotify.rs  transcode.rs  transcode2.rs  utils.rs
src/ffmpeg/: mod.rs
src/ffmpeg/codec/: audio.rs  audio_service.rs  capabilities.rs  codec.rs  compliance.rs  context.rs  debug.rs  discard.rs  field_order.rs  flag.rs  id.rs  mod.rs  parameters.rs  picture.rs  profile.rs  threading.rs  traits.rs  video.rs
src/ffmpeg/codec/decoder/: audio.rs  check.rs  conceal.rs  decoder.rs  mod.rs  opened.rs  slice.rs  subtitle.rs  video.rs
src/ffmpeg/codec/encoder/: audio.rs  comparison.rs  decision.rs  encoder.rs  mod.rs  prediction.rs  subtitle.rs  video.rs
src/ffmpeg/codec/packet/: borrow.rs  flag.rs  packet.rs  side_data.rs  traits.rs
src/ffmpeg/codec/subtitle/: flag.rs  mod.rs  rect.rs  rect_mut.rs
src/ffmpeg/device/: extensions.rs  input.rs  mod.rs  output.rs
src/ffmpeg/filter/: filter.rs  flag.rs  graph.rs  mod.rs  pad.rs
src/ffmpeg/filter/context/: context.rs  sink.rs  source.rs
src/ffmpeg/format/: mod.rs  network.rs
src/ffmpeg/format/chapter/: chapter.rs  chapter_mut.rs
src/ffmpeg/format/context/: common.rs  destructor.rs  input.rs  output.rs
src/ffmpeg/format/format/: flag.rs  input.rs  iter.rs  output.rs
src/ffmpeg/format/stream/: disposition.rs  mod.rs  stream.rs  stream_mut.rs
src/ffmpeg/software/resampling/: flag.rs  mod.rs
src/ffmpeg/software/scaling/: context.rs  filter.rs  mod.rs  vector.rs
src/ffmpeg/util/: channel_layout.rs  error.rs  interrupt.rs  media.rs  mod.rs  picture.rs  rational.rs  time.rs
src/ffmpeg/util/chroma/: location.rs
src/ffmpeg/util/color/: primaries.rs  range.rs  space.rs  transfer_characteristic.rs
src/ffmpeg/util/dictionary/: immutable.rs  iter.rs  mutable.rs  owned.rs
src/ffmpeg/util/format/: pixel.rs  sample.rs
src/ffmpeg/util/frame/: audio.rs  flag.rs  mod.rs  side_data.rs  video.rs
src/ffmpeg_bk/: mod.rs
src/ffmpeg_sys/: mod.rs
src/ffmpeg_sys/avutil/: pixfmt.rs  rational.rs  util.rs
src/matching/: correlate.rs  mod.rs
src/proto/: proto.djtool.rs
src/scheduler/: README.md  builder.rs  error.rs  job.rs  mod.rs  plan.rs  policy.rs  schedule.rs  task.rs
src/spotify/: cli.rs  config.rs  error.rs  image.rs  mod.rs  model.rs  playlists.rs  serialization.rs  show.rs  stream.rs  tasks.rs  track.rs  types.rs  user.rs
src/spotify/auth/: mod.rs  pkce.rs
src/youtube/: extractor.rs  mod.rs  model.rs  rank.rs  search.rs  stream.rs
tests/samples/: README.md
transcode/: Cargo.toml
transcode/src/: lib.rs
transcode/src/internal/: ffmpeg.rs  mod.rs
ui/: .gitignore  package.json
ui/src/: App.sass  App.tsx  constants.ts  index.sass  index.tsx  utils.ts
ui/src/components/: Button.sass  Button.tsx  Elapsed.tsx  Logo.sass  Logo.tsx  Player.tsx
ui/src/store/: actions.ts  index.ts
ui/src/views/: Default.tsx  Landing.sass  Landing.tsx  Library.sass  Library.tsx  Player.sass  Player.tsx  Sources.sass  Sources.tsx  Tracks.tsx
youtube/: Cargo.toml
youtube/src/: lib.rs
youtube/src/source/: mod.rs
(+10 files in other folders)
