[workspace]
members = [
  "ffmpeg",
  "ffmpeg-sys",
]

[package]
name = "djtool"
version = "0.0.1"
edition = "2021"

[lib]
# Disable doctests as a workaround for https://github.com/rust-lang/rust-bindgen/issues/1313
doctest = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[profile.dev]
opt-level = 0
debug = 1

[profile.release]
# opt-level = 's'  # Optimize for size.
lto = true # Link Time Optimization (LTO)

[dependencies]
reqwest = { version = "0", features = ["json", "blocking", "rustls-tls", "stream"] }
anyhow = "1"
dotenv = "0"
async-trait = "0"
regex = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
sanitize-filename = "0"
rand = "0"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
rustfft = "6"
indicatif = "0.16.2"
approx = "0"
url = "2"
clap = { version = "3", features = [ "derive", "env" ] }
rayon = "1"
rodio = "0"
dialoguer = "0"
strsim = "0"
ndarray = { version = "0" , features = ["approx", "rayon"]}
boa_engine = "0"
futures = "0.3"
num_cpus = "1"
num = "0"
http = "0"
downcast-rs = "1"
tempdir = "0"
base64 = "0"
chrono = { version = "0", features = ["serde"] }
thiserror = "1"
sha2 = "0"
webbrowser = "0"
warp = "0.3"
tauri = { version = "1", features = ["custom-protocol", "api-all"] , optional = true}
dirs = "4"
rspotify-model = { version = "0", optional = true }
async-stream = "0"
id3 = "0"
image = "0.24"
tonic = "0.9"
tonic-web = "0.9"
prost = "0.11"
prost-types = "0.11"
djtool-ffmpeg = { path = "ffmpeg", optional = true }
taski = "0"

[build-dependencies]
anyhow = "1"
lazy_static = "1"
tauri-build = { version = "1", optional = true }
tonic-build = { version = "0.9", features = ["prost"], optional = true }

[features]
default  = [
  "spotify",
  "youtube",
  "proto-build",
  "ffmpeg",
  "ui",
]

# "parallel-build",

ui = ["tauri", "tauri-build"]
proto-build = ["tonic-build"]
spotify = ["rspotify-model"]
youtube = []
ffmpeg = ["dep:djtool-ffmpeg"]
