[package]
name = "djtool"
version = "0.0.1"
edition = "2021"

[workspace]
members = [
  "ffmpeg",
  "ffmpeg-sys",
  "spotify",
  "youtube",
  "soundcloud",
  "correlation",
]

[lib]
# Disable doctests as a workaround for https://github.com/rust-lang/rust-bindgen/issues/1313
# doctest = false

[features]
# default  = [
#   "spotify",
#   "youtube",
#   "proto-build",
#   "ffmpeg",
#   "ui",
# ]
default = [
  # "proto-build",
  "youtube",
  "spotify",
  "ffmpeg",
  # "youtube",
]

# "parallel-build",
cli = ["dep:dialoguer", "dep:indicatif"]
ui = ["dep:tauri", "dep:tauri-build"]
# proto-build = ["tonic-build"]
spotify = ["dep:rspotify-model"]
youtube = []
ffmpeg = ["dep:djtool-ffmpeg"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[profile.dev]
opt-level = 0
debug = 1

[profile.release]
# opt-level = "z"  # optimize for size
opt-level = "s"  # optimize for speed
lto = true # use link time optimization (LTO)
strip = true # strip symbols
codegen-units = 1 # max one parallel codegen-unit for most optimizations

[dependencies.reqwest]
features = ["json", "blocking", "rustls-tls", "stream"]
version = "0"

[dependencies]
anyhow = "1"
dotenv = "0"
async-trait = "0"
regex = "1"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
sanitize-filename = "0"
rand = "0"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
rustfft = "6"
approx = "0"
url = "2"
clap = { version = "3", features = [ "derive", "env" ] }
rayon = "1"
rodio = "0"
strsim = "0"
ndarray = { version = "0" , features = ["approx", "rayon"]}
futures = "0.3"
num_cpus = "1"
num = "0"
http = "0"
tempdir = "0"
base64 = "0"
chrono = { version = "0", features = ["serde"] }
thiserror = "1"
sha2 = "0"
webbrowser = "0"
warp = "0.3"
dirs = "4"
async-stream = "0"
id3 = "0"
image = "0.24"
tonic = "0.9"
tonic-web = "0.9"
prost = "0.11"
prost-types = "0.11"
taski = "0"
# outdated deps
# downcast-rs = "1"
# boa_engine = "0"

# factor out to spotify
rspotify-model = { version = "0", optional = true }

# optional dependencies
djtool-ffmpeg = { path = "ffmpeg", optional = true }

# optional cli dependencies
dialoguer = { version = "0", optional = true }
indicatif = { version = "0.16.2", optional = true }

# optional ui dependencies
[dependencies.tauri]
version = "1"
features = ["custom-protocol", "api-all"]
optional = true

[build-dependencies]
anyhow = "1"
lazy_static = "1"
tonic-build = { version = "0.9", features = ["prost"] }

# optional build dependencies
tauri-build = { version = "1", optional = true }
