[package]
name = "djtool"
version = "0.0.1"
edition = "2021"

[workspace]
members = [
  "ffmpeg",
  "ffmpeg-sys",
  "spotify",
  "youtube",
  "soundcloud",
  "instagram",
  "correlation",
  "transcode",
  "model",
  "library",
  "download",
  "cli",
]

[lib]
# Disable doctests as a workaround for https://github.com/rust-lang/rust-bindgen/issues/1313
# doctest = false

# [[bin]]
# name = "djtool"    
# required-features = ["ui", "cli", "api"]
#
# [[bin]]
# name = "djtool-cli"    
# required-features = ["cli"]
#
# [[bin]]
# name = "djtool-server"    
# required-features = ["api"]

[features]
# default  = [
#   "spotify",
#   "youtube",
#   "proto-build",
#   "ffmpeg",
#   "ui",
# ]
default = [
  # "proto-build",
  # "youtube",
  # "ffmpeg",
  # "youtube",
  "spotify",
  "cli",
]

# "parallel-build",
cli = ["dep:dialoguer", "dep:indicatif"]
ui = ["dep:tauri", "dep:tauri-build"]
server = []

spotify = ["dep:spotify"]
# youtube = []
# ffmpeg = ["dep:djtool-ffmpeg"]

# proto-build = ["tonic-build"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-feature-combinations]
denylist = ["default"]

[profile.dev]
opt-level = 0
debug = 1

[profile.release]
# opt-level = "z"  # optimize for size
opt-level = "s"  # optimize for speed
lto = true # use link time optimization (LTO)
strip = true # strip symbols
codegen-units = 1 # max one parallel codegen-unit for most optimizations

[dependencies.reqwest]
features = ["json", "blocking", "rustls-tls", "stream"]
version = "0"

[dependencies]
djtool-model = { path = "./model" }
library = { path = "./library" }

color-eyre = "0"
dotenv = "0"
clap = { version = "3", features = [ "derive", "env" ] }
async-trait = "0"
tokio = { version = "1", features = ["full"] }
sanitize-filename = "0"
rand = "0"
futures = "0.3"
chrono = { version = "0", features = ["serde"] }
thiserror = "1"

spotify = { path = "./spotify", optional = true }

# optional dependencies
# djtool-ffmpeg = { path = "ffmpeg", optional = true }

# optional cli dependencies
dialoguer = { version = "0", optional = true }
indicatif = { version = "0.16.2", optional = true }

# optional ui dependencies
[dependencies.tauri]
version = "1"
features = ["custom-protocol", "api-all"]
optional = true

[build-dependencies]
# lazy_static = "1"
# tonic-build = { version = "0.9", features = ["prost"] }

# optional build dependencies
tauri-build = { version = "1", optional = true }
