[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[features]
default = ["spotify"]
spotify = ["dep:spotify"]

[dependencies]
dotenv = "0"
tokio = { version = "1", features = ["full"] }
clap = { version = "3", features = [ "derive", "env" ] }
spotify = { path = "../spotify", optional = true }
