[package]
name = "djtool-ffmpeg-sys"
version = "0.0.1"
edition = "2021"
publish = true
authors = ["djtool authors"]
description = "ffmpeg bindings"
license-file = "../LICENSE"
readme = "../README.md"
documentation = "https://docs.rs/djtool-ffmpeg-sys"
homepage = "https://github.com/romnn/djtool-ffmpeg-sys"
repository = "https://github.com/romnn/djtool-ffmpeg-sys"
links = "ffmpeg"
categories = [
  "external-ffi-bindings",
  "development-tools::profiling",
  "os::unix-apis",
]
keywords = [
  "ffmpeg",
  "multimedia",
  "audio",
]
exclude = []

[dependencies]
libc = "0.2"

[build-dependencies]
anyhow = "1"
num_cpus = "1"
cc = "1"
pkg-config = "0.3"
lazy_static = "1"
bindgen    = { version = "0", default-features = false, features = ["runtime"] }
tauri-build = { version = "1", optional = true }
tonic-build = { version = "0.9", features = ["prost"], optional = true }
rayon = { version = "1", optional=true }
crossbeam-channel = { version = "0", optional = true }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"

[features]
default  = [
  "ffmpeg-avcodec",
  "ffmpeg-avdevice",
  "ffmpeg-avfilter",
  "ffmpeg-avformat",
  "ffmpeg-swresample",
  "ffmpeg-swscale",
  # additional ffmpeg decoders and encoders
  "ffmpeg-mp3lame",
  "ffmpeg-license-nonfree",
]

# parallel dependency graph iterator to build dependencies in parallel
# parallel-build = ["rayon", "crossbeam-channel"]

# tauri
# custom-protocol = [ "tauri/custom-protocol" ]

# licensing
ffmpeg-license-gpl      = []
ffmpeg-license-nonfree  = []
ffmpeg-license-version3 = []

# misc
ffmpeg-drm   = []
ffmpeg-nvenc = []
ffmpeg-pic   = []
ffmpeg-zlib  = []

# ssl
ffmpeg-gnutls  = []
ffmpeg-openssl = []

# filters
ffmpeg-fontconfig = []
ffmpeg-frei0r     = []
ffmpeg-ladspa     = []
ffmpeg-ass        = []
ffmpeg-freetype   = []
ffmpeg-freebidi   = []
ffmpeg-opencv     = []
ffmpeg-vmaf       = []

# encoders/decoders
ffmpeg-aacplus          = []
ffmpeg-celt             = []
ffmpeg-dav1d            = []
ffmpeg-dcadec           = []
ffmpeg-faac             = []
ffmpeg-fdk-aac          = []
ffmpeg-gsm              = []
ffmpeg-ilbc             = []
ffmpeg-kvazaar          = []
ffmpeg-mp3lame          = []
ffmpeg-opencore-amrnb   = []
ffmpeg-opencore-amrwb   = []
ffmpeg-openh264         = []
ffmpeg-openjpeg         = []
ffmpeg-opus             = []
ffmpeg-schroedinger     = []
ffmpeg-shine            = []
ffmpeg-snappy           = []
ffmpeg-speex            = []
ffmpeg-stagefright-h264 = []
ffmpeg-theora           = []
ffmpeg-twolame          = []
ffmpeg-utvideo          = []
ffmpeg-vo-aacenc        = []
ffmpeg-vo-amrwbenc      = []
ffmpeg-vorbis           = []
ffmpeg-vpx              = []
ffmpeg-wavpack          = []
ffmpeg-webp             = []
ffmpeg-x264             = []
ffmpeg-x265             = []
ffmpeg-avs              = []
ffmpeg-xvid             = []

# protocols
ffmpeg-smbclient = []
ffmpeg-ssh       = []

# components
ffmpeg-avcodec    = []
ffmpeg-avdevice   = ["ffmpeg-avformat"]
ffmpeg-avfilter   = []
ffmpeg-avformat   = ["ffmpeg-avcodec"]
ffmpeg-avresample = []
ffmpeg-postproc   = []
ffmpeg-swresample = []
ffmpeg-swscale    = []
